# directed_howis-ingestor

./: .gitignore  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
.github/workflows/: main.yml
csa_requests/: Pegel_Schoenau_system.json  datastream.json  post_datastream.http  post_system.http  system.json
howis_ingestor/: __init__.py  __main__.py  cli.py  csa_staging.py  ingester.py  parser.py  stager.py  utils.py
howis_ingestor/tests/: test_utils.py
tests/: conftest.py  test_cli.py
