[tool.poetry]

name = "directed_howis-ingestor"
version = "0.0"
description = "A simple HOWIS data ingestor"

packages = [{ include = "howis_ingestor" }]

license = "MIT"
authors = ["Henning Bredel <h.bredel@52north.org>"]

readme = "README.md"
homepage = "https://pypi.org/project/directed_howis-ingestor"
documentation = "https://github.com/52North/directed_howis-ingestor"
repository = "https://github.com/52North/directed_howis-ingestor"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]

python = "^3.11"

# TODO: Remove these and add your library's requirements
click = "*"
minilog = "*"
loguru = "^0.7.2"
pyproj = "^3.6.1"
requests = "^2.32.3"
python-jsonpath = "^1.2.0"

[tool.poetry.dev-dependencies]

# Formatters
black = "^22.1"
tomli = "*" # missing 'black' dependency
isort = "^5.10"

# Linters
mypy = "^1.0"
pydocstyle = "^6.1"
pylint = "~2.15"
pylint-pytest = "*"
wrapt = "*" # missing 'pylint' dependency

# Testing
pytest = "^8.1"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-random = "*"
freezegun = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

[tool.poetry.scripts]

ingestor = "howis_ingestor.cli:main"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]

addopts = """
--strict-markers

-r sxX
"""

cache_dir = ".cache/pytest/"

markers = []

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
